UPDATE: Fix bug auth
